objects/Facility_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Recommendation_to_Producer__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Recommendation to Producer (General)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Producer_air__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Recommendation to Producer (Air)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Producer_feed__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Recommendation to Producer (Feed)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Producer_water__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Recommendation to Producer (Water)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Severity_of_Scouring__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Severity of Scouring?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shower_in_out__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Shower in/out?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sufficient_feeder_space__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Sufficient feeder space?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_curve_being_used_for_ventilation__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Temp curve being used for ventilation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trough_Fed_in_Phase_1__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Trough Fed in Phase 1?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_controller__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <label>Type of controller?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UltraCare_Gel_Used_in_Phase_1__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>UltraCare Gel Used in Phase 1?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UltraCare_Used__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>UltraCare Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ventilation_System_CFM__c</fullName>
        <description>Field in the Air section of the Facility Checklist object</description>
        <inlineHelpText>Does ventilation system provide 1-6 CFM per pig in winter and 20-40 CFM per pig in summer?</inlineHelpText>
        <label>Ventilation System CFM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_group_creep_fed__c</fullName>
        <description>Field in the Feed section of the Facility Checklist object</description>
        <label>Was this group creep fed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Pressure_at_the_nipple__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <inlineHelpText>(Low Rate in oz/min)</inlineHelpText>
        <label>Water Pressure at the nipple?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_cup_type__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Water cup type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cup</fullName>
                </value>
                <value>
                    <fullName>Trough</fullName>
                </value>
                <value>
                    <fullName>Nipple</fullName>
                </value>
                <value>
                    <fullName>Swing nipple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_high_quality_Would_you_drink_it__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Water high quality? Would you drink it?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_medicator_availability__c</fullName>
        <description>Field in the Water section of the Facility Checklist object</description>
        <label>Water medicator availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wean_Weight_of_Current_Group__c</fullName>
        <description>Field in the General section of the Facility Checklist object</description>
        <label>Wean Weight of Current Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10 lbs</fullName>
                </value>
                <value>
                    <fullName>10-12 lbs</fullName>
                </value>
                <value>
                    <fullName>12-14 lbs</fullName>
                </value>
                <value>
                    <fullName>15+ lbs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Facility Checklist</label>
    <listViews>
        <fullName>All_Facility_Checklists</fullName>
        <columns>NAME</columns>
        <columns>Contact_1__c</columns>
        <columns>Producer_Facility__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Facility Checklists</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{000000000}</displayFormat>
        <label>Facility Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Checklists</pluralLabel>
    <recordTypes>
        <fullName>Swine_Facility_Walk_Through</fullName>
        <active>true</active>
        <description>Record Type for Swine Facility Walk Through</description>
        <label>Swine Facility Walk Through</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>